--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,15 @@
-body {
-  width: 960px;
-  margin: auto;
-  font-family: sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
+
+html {
+  background: #333333;
+  color: white;
+  font-size: 100px;
 }
 
-h1 {
-  color: limegreen;
+body {
+  font-family: monospace, sans-serif;
+  width: 960px;
+  margin: auto;
+  padding: 50px;
+  font-family: 'Source Code Pro', monospace;
 }
