--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,8 +8,8 @@ html {
 
 body {
   font-family: monospace, sans-serif;
-  width: 960px;
-  margin: auto;
-  padding: 50px;
+  width: 100%;
+  margin: 0;
+  padding: 50px 0;
   font-family: 'Source Code Pro', monospace;
 }
